# MegNet

./: .gitignore  README.md  pyproject.toml
.github/workflows/: megnet-actions.yml  megnet-actions_py39.yml
MEGnet/: megnet_init.py
MEGnet/easy_megnet/: Command.py  Command2.py  MEGNET_TUTORIAL.md  command3.py  easy_megnet.py
