[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "MEGnet-neuro"
description = "Package to calculate and classify ICAs using MEGNET deep learning architecture"
readme = "README.md"
requires-python = "<3.12" #Required for Tensorflow 

authors = [
  { name="Jeff Stout", email="stoutjd@nih.gov" },
  { name="Allison Nugent", email="nugenta@nih.gov" },
]

license = "LicenseRef-LICENSE"
license-files = ["LICENSE"]
classifiers=[
        "Programming Language :: Python :: 3",
        "Operating System :: POSIX",
    ]
dependencies = [
    'mne', 'numpy', 'scipy', 'pandas', 'munch', 'nibabel', 'joblib',  'tensorflow==2.15', 'scikit-learn', 'huggingface_hub>=0.24.0'
]
version = "0.3.1"

[project.optional-dependencies]
dev = ['stabilized-ica']
testing = ['datalad','pytest','pygit2']
#training = ['imblearn', 'openxyl', 'smote-variants', 
#             'iterative-stratification  @ git+https://github.com/trent-b/iterative-stratification.git@master', 'tensorflow-addons[tensorflow]']

[project.scripts]
"ICA.py"='MEGnet.prep_inputs.ICA:cmdline'
"megnet_qc_plots.py"='MEGnet.megnet_qc_plots:main'
"megnet_init"='MEGnet.megnet_init:main'


[tool.setuptools.packages.find]
include = ["MEG*"]
exclude = ["extras*", "conda*"]
